[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/UI.gd" type="Script" id=1]

[node name="UI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LoseScreen" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.984314, 0.0431373, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/LoseScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = -7.0
margin_right = 34.0
margin_bottom = 7.0
text = "YOU LOSE!"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/LoseScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/LoseScreen/VBoxContainer"]
margin_right = 512.0
margin_bottom = 148.0
size_flags_vertical = 3

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/LoseScreen/VBoxContainer"]
margin_top = 152.0
margin_right = 512.0
margin_bottom = 300.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/LoseScreen/VBoxContainer/CenterContainer2"]
margin_left = 191.0
margin_top = 64.0
margin_right = 321.0
margin_bottom = 84.0
size_flags_horizontal = 3

[node name="TryButton" type="Button" parent="CanvasLayer/LoseScreen/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 81.0
margin_bottom = 20.0
text = "TRY AGAIN"

[node name="QuitButton" type="Button" parent="CanvasLayer/LoseScreen/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 85.0
margin_right = 130.0
margin_bottom = 20.0
text = "QUIT"

[node name="WinScreen" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0.470588, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/WinScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -7.0
margin_right = 32.0
margin_bottom = 7.0
text = "YOU WIN!"
[connection signal="pressed" from="CanvasLayer/LoseScreen/VBoxContainer/CenterContainer2/HBoxContainer/TryButton" to="." method="_on_TryButton_pressed"]
[connection signal="pressed" from="CanvasLayer/LoseScreen/VBoxContainer/CenterContainer2/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
